--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,35 @@
+.body{
+	background-color: black;
+}
+
 .about-me {
+	color: green;
 	text-align: center;
+	font-family: 'Lily Script One', cursive;
 }
 
 .section{
+	font-family: 'Exo 2', sans-serif;
+	text-align: center;
+	font-size: 20px;
+	color: green;
+}
+
+
+.section2{
+	font-family: 'Exo 2', sans-serif;
+	padding: 30px 20px 20px 20px;
+	font-size: 20px;
+	color: green;
+	margin: 20px 20px 20px 30px;
 	text-align: center;
 }
 
-.section2{
-	
+#enjoy {
+	font-family: 'Lobster', cursive;
+	padding: 40px 30px 30px 40px;
+	color: green;
+	text-align: center;
+	padding: 40px 40px 40px 40px;
+	font-size: 50px;
 }
