--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,13 @@
 	font-family: 'Lily Script One', cursive;
 }
 
-.section{
-	font-family: 'Exo 2', sans-serif;
+.aboutme {
+	color: red;
 	text-align: center;
-	font-size: 20px;
-	color: green;
+	font-family: 'Lily Script One', cursive;
 }
 
-
-.section2{
+.section {
 	font-family: 'Exo 2', sans-serif;
 	padding: 30px 20px 20px 20px;
 	font-size: 20px;
@@ -25,11 +23,54 @@
 	text-align: center;
 }
 
+.section2 {
+	background-color: red;
+
+}
+
+
 #enjoy {
 	font-family: 'Lobster', cursive;
-	padding: 40px 30px 30px 40px;
+	padding: 20px 30px 30px 20px;
 	color: green;
 	text-align: center;
-	padding: 40px 40px 40px 40px;
 	font-size: 50px;
+}
+
+.second {
+	font-family: 'Exo 2', sans-serif;
+	font-size: 20px;
+	color: green;
+	text-align: left;
+	margin: 0px 10px 10px 90px;
+	width: 100px;
+}
+
+.body2 {
+	background-color: red;
+}
+
+a:link {
+	color: white;
+	background-color: black;
+}
+
+a:visited {
+	color: white;
+	background-color: black;
+}
+
+a:hover {
+  color: green;
+  background-color: black ;
+  text-decoration: none;
+}
+
+a:active {
+	color: green;
+	background-color: black;
+}
+
+.audio {
+	opacity: 0;
 }
